kubernetes/extra/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web
status:
  loadBalancer: {}
